--- a/doc/latex/d2/d2d/md_doc_2kernel.tex
+++ b/doc/latex/d2/d2d/md_doc_2kernel.tex
@@ -1,2 +1,8 @@
 \chapter{kernel}
 \hypertarget{md_doc_2kernel}{}\label{md_doc_2kernel}\index{kernel@{kernel}}
+The kernel consists of three main aspects.
+\begin{DoxyEnumerate}
+\item The Kernel
+\item The Schduler
+\item The Shell 
+\end{DoxyEnumerate}
