--- a/doc/latex/dir_b7878ad5ecbf2506f4125b9d34c97e45.tex
+++ b/doc/latex/dir_b7878ad5ecbf2506f4125b9d34c97e45.tex
@@ -15,6 +15,8 @@ file \mbox{\hyperlink{clinkedlist_8c}{clinkedlist.\+c}}
 \item 
 file \mbox{\hyperlink{clinkedlist_8h}{clinkedlist.\+h}}
 \item 
+file \mbox{\hyperlink{error_8h}{error.\+h}}
+\item 
 file \mbox{\hyperlink{globals_8c}{globals.\+c}}
 \item 
 file \mbox{\hyperlink{globals_8h}{globals.\+h}}
