--- a/doc/latex/refman.tex
+++ b/doc/latex/refman.tex
@@ -251,6 +251,8 @@
 \input{dd/dc7/clinkedlist_8c}
 \input{d7/d12/clinkedlist_8h}
 \input{d7/d12/clinkedlist_8h_source}
+\input{da/d41/error_8h}
+\input{da/d41/error_8h_source}
 \input{db/d28/globals_8c}
 \input{d5/d87/globals_8h}
 \input{d5/d87/globals_8h_source}
