--- a/doc/latex/d5/d87/globals_8h_source.tex
+++ b/doc/latex/d5/d87/globals_8h_source.tex
@@ -9,23 +9,22 @@
 \DoxyCodeLine{00005\ \textcolor{preprocessor}{\#include\ "{}\mbox{\hyperlink{kernel_8h}{kernel.h}}"{}}}
 \DoxyCodeLine{00006\ \textcolor{preprocessor}{\#include\ "{}\mbox{\hyperlink{prioritylist_8h}{prioritylist.h}}"{}}}
 \DoxyCodeLine{00007\ }
-\DoxyCodeLine{00008\ \textcolor{keyword}{extern}\ \mbox{\hyperlink{structCircularList}{CircularList}}*\ \mbox{\hyperlink{globals_8h_a02d81cd80b6c38b0ce741c9244fd9f17}{processes}}[3];}
-\DoxyCodeLine{00009\ }
-\DoxyCodeLine{00010\ \textcolor{keyword}{extern}\ \mbox{\hyperlink{structCircularList}{CircularList}}*\ \mbox{\hyperlink{globals_8h_a4a5bf3e2ca112a01dc3029503e3e80e4}{blocked}};}
-\DoxyCodeLine{00011\ }
-\DoxyCodeLine{00012\ \textcolor{keyword}{extern}\ \mbox{\hyperlink{structCircularList}{CircularList}}*\ \mbox{\hyperlink{globals_8h_aa733d308e782d6ef693944928ff7d3d1}{stopped}};}
-\DoxyCodeLine{00013\ }
-\DoxyCodeLine{00014\ \textcolor{keyword}{extern}\ \mbox{\hyperlink{structCircularList}{CircularList}}*\ \mbox{\hyperlink{globals_8h_a5e7aa369c6421b8cf905e838507cc70a}{zombied}};}
+\DoxyCodeLine{00014\ \textcolor{keyword}{extern}\ \mbox{\hyperlink{structCircularList}{CircularList}}*\ \mbox{\hyperlink{globals_8h_a02d81cd80b6c38b0ce741c9244fd9f17}{processes}}[3];}
 \DoxyCodeLine{00015\ }
-\DoxyCodeLine{00016\ \textcolor{keyword}{extern}\ \mbox{\hyperlink{structpcb__t}{pcb\_t}}*\ \mbox{\hyperlink{globals_8h_aadfd9da35df54aa07940062a8b8326e2}{current}};}
-\DoxyCodeLine{00017\ }
-\DoxyCodeLine{00018\ \textcolor{keyword}{extern}\ pid\_t\ \mbox{\hyperlink{globals_8h_a54a60f61f4b468b7e6ef164c4b5ba60b}{next\_pid}};\ \ \textcolor{comment}{//\ idk,\ i\ guess\ redefine\ this\ if\ you\ want\ to\ reuse\ pcbs?}}
-\DoxyCodeLine{00019\ \textcolor{comment}{//\ i\ have\ no\ strong\ urge\ to\ write\ that\ function}}
-\DoxyCodeLine{00020\ }
-\DoxyCodeLine{00021\ \textcolor{keyword}{extern}\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{globals_8h_abfb6a5b45038dfab7134f82adad169d7}{logfiledescriptor}};}
-\DoxyCodeLine{00022\ }
-\DoxyCodeLine{00023\ \textcolor{keyword}{extern}\ \textcolor{keywordtype}{unsigned}\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{globals_8h_a6c17b5754a836f005f69312ee0080106}{tick}};}
-\DoxyCodeLine{00024\ }
-\DoxyCodeLine{00025\ \textcolor{preprocessor}{\#endif}}
+\DoxyCodeLine{00020\ \textcolor{keyword}{extern}\ \mbox{\hyperlink{structCircularList}{CircularList}}*\ \mbox{\hyperlink{globals_8h_a4a5bf3e2ca112a01dc3029503e3e80e4}{blocked}};}
+\DoxyCodeLine{00021\ }
+\DoxyCodeLine{00026\ \textcolor{keyword}{extern}\ \mbox{\hyperlink{structCircularList}{CircularList}}*\ \mbox{\hyperlink{globals_8h_aa733d308e782d6ef693944928ff7d3d1}{stopped}};}
+\DoxyCodeLine{00027\ }
+\DoxyCodeLine{00033\ \textcolor{keyword}{extern}\ \mbox{\hyperlink{structCircularList}{CircularList}}*\ \mbox{\hyperlink{globals_8h_a5e7aa369c6421b8cf905e838507cc70a}{zombied}};}
+\DoxyCodeLine{00034\ }
+\DoxyCodeLine{00040\ \textcolor{keyword}{extern}\ \mbox{\hyperlink{structpcb__t}{pcb\_t}}*\ \mbox{\hyperlink{globals_8h_aadfd9da35df54aa07940062a8b8326e2}{current}};}
+\DoxyCodeLine{00041\ }
+\DoxyCodeLine{00049\ \textcolor{keyword}{extern}\ pid\_t\ \mbox{\hyperlink{globals_8h_a54a60f61f4b468b7e6ef164c4b5ba60b}{next\_pid}};}
+\DoxyCodeLine{00050\ }
+\DoxyCodeLine{00056\ \textcolor{keyword}{extern}\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{globals_8h_abfb6a5b45038dfab7134f82adad169d7}{logfiledescriptor}};}
+\DoxyCodeLine{00057\ }
+\DoxyCodeLine{00063\ \textcolor{keyword}{extern}\ \textcolor{keywordtype}{unsigned}\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{globals_8h_a6c17b5754a836f005f69312ee0080106}{tick}};}
+\DoxyCodeLine{00064\ }
+\DoxyCodeLine{00065\ \textcolor{preprocessor}{\#endif}}
 
 \end{DoxyCode}
