--- a/doc/latex/index.tex
+++ b/doc/latex/index.tex
@@ -6,6 +6,6 @@
 Penn\+OS is a UNIX-\/like operating system that runs as a guest OS within a single process on a host OS. It includes implementations of a basic priority scheduler, a FAT file system (Penn\+FAT), and user shell interactions.\hypertarget{index_autotoc_md1}{}\doxysubsection{\texorpdfstring{Documentation}{Documentation}}\label{index_autotoc_md1}
 
 \begin{DoxyItemize}
-\item \doxysectlink{md_doc_2kernel}{{\bfseries{Kernel Documentation}}}{0}\+: Here is an overview of the kernel and the kernel funcationality.
+\item \doxysectlink{md_doc_2kernel}{{\bfseries{Kernel Documentation}}}{0}\+: Here is an overview of the Kernel, Scheduler, and Shell, and its related functions and structure.
 \item \doxysectlink{md_doc_2fat}{{\bfseries{FAT Documentation}}}{0}\+: Here is an overview of the structure of the filesystem, and its related functions. 
 \end{DoxyItemize}
