--- a/doc/latex/refman.tex
+++ b/doc/latex/refman.tex
@@ -210,6 +210,9 @@
 \input{index}
 \input{d2/dd4/md_doc_2fat}
 \input{d2/d2d/md_doc_2kernel}
+\input{d9/d1f/md_doc_2scheduler}
+\input{d1/d57/md_doc_2shell}
+\input{d2/d84/md_doc_2system}
 \chapter{Data Structure Index}
 \input{annotated}
 \chapter{File Index}
@@ -233,6 +236,9 @@
 \input{d1/d4c/fat_8md}
 \input{d1/d56/kernel_8md}
 \input{da/ddd/README_8md}
+\input{de/d4f/scheduler_8md}
+\input{d4/d40/shell_8md}
+\input{df/d66/system_8md}
 \input{d5/d36/parser_8h}
 \input{d5/d36/parser_8h_source}
 \input{d4/dc4/pennfat_8c}
